2001-12-04  Jakub Jelinek  <jakub@redhat.com>

	* strings.c: Include config.h before bfd.h.
	(file_off): New type.
	(file_open): Define.
	(print_strings): Use file_off instead of file_ptr.  Print addresses
	which don't fit into long correctly.
	(get_char): Use file_off instead of file_ptr.  Use getc_unlocked if
	available.
	(strings_file): Use file_off instead of file_ptr.  Use file_open.
	* configure.in: Check for getc_unlocked.
	Check for fopen64 and whether _LARGEFILE64_SOURCE needs to
	be defined for it.
	* configure: Rebuilt.
	* config.h.in: Rebuilt.

2001-11-29  H.J. Lu <hjl@gnu.org>

	* bucomm.c (make_tempname): Revert the changes made on
	2001-11-14 and 2001-11-12. They won't work with directories.

2001-11-23  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* binutils/Makefile.am (check-DEJAGNU): Pass CC_FOR_TARGET and
	CFLAGS_FOR_TARGET to runtest in environment.
	* Makefile.in: Rebuild.
	* doc/Makefile.in: Rebuild.

2001-11-28  Mike Stump  <mrs@wrs.com>

	* objcopy.c (setup_section): Preserve SEC_RELOC when
	--set-section-flags is used.

2001-11-19  Nick Clifton  <nickc@cambridge.redhat.com>

	* readelf.c (do_debug_str): New variable.
	(display_debug_str): New function: Display the contents of a
	.debug_str section.
	(load_debug_str): New function: Load in the contents of a
	.debug_str section.
	(free_debug_str): New function: Free the memory used by
	load_debug_str().
	(fetch_indirect_string): Retrieve a string from the .debug_str
	section.
	(usage): Add -ws.
	(parse_args): Accept -ws.
	(process_section_headers): Allow the display of the .debug_str
	section.
	(read_and_display_attr_value): Use fetch_indirect_string.  Show
	offset into .debug_str section.
	(display_debug_info): Use load_debug_str and free_debug_str.
	(debug_displays): Add .debug_str.
	* doc/binutils.texi: Document -ws.

2001-11-19  Andreas Jaeger  <aj@suse.de>

	* testsuite/binutils-all/objdump.exp: Add x86-64.

2001-11-15  Andreas Schwab  <schwab@suse.de>
