@@ -22,54 +22,40 @@ struct list {
 	struct list *next;
 };
 
-void
-maybequit PARAMS ((void));
+void maybequit PARAMS ((void));
 
-void
-prompt PARAMS ((void));
+void prompt PARAMS ((void));
 
-void
-ar_clear PARAMS ((void));
+void ar_clear PARAMS ((void));
 
-void
-ar_replace PARAMS ((struct list *));
+void ar_replace PARAMS ((struct list *));
 
-void
-ar_delete PARAMS ((struct list *));
+void ar_delete PARAMS ((struct list *));
 
-void
-ar_save PARAMS ((void));
+void ar_save PARAMS ((void));
 
-void
-ar_list PARAMS ((void));
+void ar_list PARAMS ((void));
 
-void
-ar_open PARAMS ((char *, int));
+void ar_open PARAMS ((char *, int));
 
-void
-ar_directory PARAMS ((char *, struct list *, char *));
+void ar_directory PARAMS ((char *, struct list *, char *));
 
-void
-ar_addmod PARAMS ((struct list *));
+void ar_addmod PARAMS ((struct list *));
 
-void
-ar_addlib PARAMS ((char *, struct list *));
+void ar_addlib PARAMS ((char *, struct list *));
 
-void 
-ar_end PARAMS ((void));
+void ar_end PARAMS ((void));
 
-void
-ar_extract PARAMS ((struct list *));
+void ar_extract PARAMS ((struct list *));
 
-bfd *
-open_inarch PARAMS ((const char *archive_filename, const char *));
+bfd *open_inarch PARAMS ((const char *archive_filename, const char *));
 
-int
-yyparse PARAMS ((void));
+extern int yylex PARAMS ((void));
+
+int yyparse PARAMS ((void));
 
 /* Functions from ar.c */
 
-void
-extract_file PARAMS ((bfd * abfd));
+void extract_file PARAMS ((bfd * abfd));
 
 extern int interactive;
