@@ -1,3 +1,8 @@
+2001-12-04  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
+
+	* arlex.l: Silence compile warnings.
+	* arsup.h: Likewise. Fix formatting.
+
 2001-12-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* strings.c: Include config.h before bfd.h.
